Prevent dropdown arrow from partially covering notifcations menu

--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -142,3 +142,7 @@
 .navbar-expand .navbar-nav .nav-link {
     padding-right: 1.5rem;
 }
+
+.popover-region-toggle::after {
+      border-bottom: 9px solid transparent !important;
+}
